src/index.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html,
body,
#root {
  height: 100%;
  background-color: #fff;
  font-family: "Poppins", sans-serif;
}

.container {
  min-height: 100%;
}

.nav {
  display: flex;
  height: 70px;
  padding: 22px 30px;
  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.1);
}

/* Fix Safari issue with stretched img */
.nav__logo {
  max-width: 100px;
}

.hero {
  display: flex;
  flex-direction: column;
  padding: 26px 36px 49px;
}

.hero__grid {
  align-self: center;
  max-width: 400px;
  margin-bottom: 32px;
}

.hero__grid img,
.card__img {
  display: block;
  width: 100%;
  object-fit: cover;
}

.hero__title {
  margin-bottom: 16px;
  color: #000;
  font-weight: 600;
  font-size: 36px;
  line-height: 110%;
}

.hero__text {
  max-width: 320px;
  color: #222;
  font-weight: 300;
  font-size: 16px;
  line-height: 110%;
}

.cards-container {
  display: flex;
  gap: 18px;
  padding: 0 36px 30px;
}

.card {
  display: flex;
  flex-direction: column;
  flex: 0 0 auto;
  max-width: 176px;
}

.card__img-wrapper {
  position: relative;
  margin-bottom: 9px;
  border-radius: 9px;
}

.card__badge {
  position: absolute;
  display: inline-block;
  top: 6px;
  left: 6px;
  padding: 4px 6px;
  border-radius: 2px;
  background-color: #fff;
  color: #222222;
  font-weight: 400;
  font-size: 10.24px;
  line-height: 110%;
  text-transform: uppercase;
}

.card__stats {
  display: flex;
  align-items: center;
  gap: 2px;
}

.card__stats,
.card__title,
.card__price {
  margin-bottom: 8px;
  color: #222222;
  font-weight: 300;
  font-size: 12px;
  line-height: 110%;
}

.card__count,
.card__state {
  color: #918e9b;
}

.card__price strong {
  font-weight: 600;
}

